# rdl

./: .gitignore  CPM.cmake  README.md  installdeps.sh  package.json  pnpm-lock.yaml
app/: discord.js  index.js  package-lock.json  package.json  pnpm-lock.yaml
backend/: CMakeLists.txt  Cargo.toml  example.env  package.json
backend/src/: App.cpp  AppComponent.hpp  main.rs
backend/src/controller/: Controller.hpp  MyController.cpp  MyController.hpp
backend/src/controller/api/v1/: index.hpp
backend/src/modules/: server.hpp  zmq.hpp
backend/src/oauth2/: login.cpp
backend/src/utils/: loggy.hpp
bot/: CMakeLists.txt
bots/: CMakeLists.txt  example.env  package.json
bots/src/: main.cpp
bots/src/commands/rdl/: ping.hpp
db/: index.js  package-lock.json  package.json  pnpm-lock.yaml
db/prisma/: schema.prisma
frontend/: next-i18next.config.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: i18n.ts  root.tsx
frontend/app/components/: ApiTest.tsx  Avatar.tsx  BotCard.tsx  Dock.tsx  LinkPreviewer.tsx  Navbar.tsx  Sidebar.tsx  Welcome.tsx
frontend/app/routes/: app.tsx  index.tsx
frontend/components/: BotCard.tsx  BotCardList.tsx  Navbar.tsx  Sidebar.tsx  Welcome.tsx
frontend/components/Dock/: button.tsx  icon.tsx  index.tsx
frontend/pages/: _app.tsx  _document.tsx  app.tsx  index.tsx
frontend/styles/: sheet.css  tailwind.css
frontend/twgen/: addons.ts
old_backend/: CMakeLists.txt  example.env  package.json
old_backend/src/: App.cpp  AppComponent.hpp  client.cpp
old_backend/src/controller/api/v1/: 404.hpp  index.hpp
old_backend/src/controller/nonapi/: 404.hpp  index.hpp
old_backend/src/dto/: DTOs.hpp
old_backend/src/modules/: server.hpp  signalHandler.hpp  zmq.hpp
old_backend/src/oauth2/: login.hpp
old_backend/src/utils/: lockdown.hpp  loggy.hpp  uri.hpp
old_frontend/app/: root.tsx  tailwind.css
old_frontend/app/components/: Dock.tsx  Navbar.tsx  Welcome.tsx
old_frontend/app/routes/: index.tsx
runecoins/: CMakeLists.txt  package.json
runecoins/src/: main.cpp
tools/generators/bot/: schema.json
tools/generators/frontend/: schema.json
tools/generators/server/: schema.json
